--- a/style.css
+++ b/style.css
@@ -321,7 +321,6 @@ footer {
   justify-content: space-around;
   margin-top: 20px;
   align-items: center;
-  background-color: white;
 }
 
 .sobre{
@@ -331,12 +330,13 @@ footer {
   align-items: center;
 
 }
-.sobre_info{
-  width: 70%;
+
+.sobre_info h6{
+  width: 100%;
   height: 300px;
-  margin: 8% 0;
   padding: 10px;
-  font-size: 38pt;}
+  font-size: 50px;
+}
 
 .sobrenos{
   height: 500px;
@@ -356,11 +356,12 @@ footer {
 
 .login button{
   width: 300px;
-  background-color: white;
+  background-color: #B20606;
   height: 55px;
   border-radius: 15px;
   border: 2px solid black;
   margin: 10px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 1); 
 }
 
 .login button:hover{
@@ -521,5 +522,40 @@ justify-content: space-between;}
   width: 60%;
   align-items: center;
   flex-direction: column;
+}
+
+
+.sobrenos {
+  font-family: sans-serif;
+  display: flex;
+  width: 100%;
+  height: 500px;
+  justify-content: space-around;
+  margin: 20px 0;
+  align-items: center;
+}
+
+.criador {
+  text-align: center;
+  margin: 10px;
+}
+
+
+.criador img {
+  width: 200px;
+  height: 200px;
+  border-radius: 50%; 
+  margin-bottom: 15px;
+  border: 4px solid #555;
+}
+
+.criador p {
+  font-size: 15px;
+  color: #555;
+}
+
+.logo{
+  width: 300px;
+  height: 300px;
 }
 
