--- a/style.css
+++ b/style.css
@@ -390,27 +390,32 @@ footer {
 }
 .loginCaixa input{
   margin: 20px 0;
-  width: 80%;
+  width: 90%;
   height: 40px;
   background-color: black;
   border: 2px solid white;
   border-radius: 10px;
   color: white;
+  padding: 5px;
 }
+
 .loginCaixa button{
-  width: 50%;
+  width: 90%;
   height: 50px;
   background-color: rgb(122, 0, 0);
   color: white;
   border: 2px solid white;
   border-radius: 15px;
   align-self: center;
-  margin: 15px 0;
+  margin: 5px 0;
 }
 .loginCaixa button:hover{
   background-color: black;
-  border: 2px solid rgb(122, 0, 0);
+  border: 2px solid white;
+}
 
+button[disabled]{
+  opacity: 0.7;
 }
 
 .conteudo h2{
@@ -558,4 +563,3 @@ justify-content: space-between;}
   width: 300px;
   height: 300px;
 }
-
