--- a/style.css
+++ b/style.css
@@ -563,3 +563,49 @@ justify-content: space-between;}
   width: 300px;
   height: 300px;
 }
+
+/* Responsividade */
+@media only screen and (max-width: 768px) {
+  header {
+    padding: 0.5rem;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+  }
+
+  h2 {
+    font-size: 1rem;
+  }
+
+  .div_burger {
+    display: block;
+  }
+
+  .gallery,
+  .carousel,
+  .infor {
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    overflow-y: hidden;
+    scroll-snap-type: none;
+  }
+
+  .gallery img,
+  .carousel img,
+  .infor div {
+    flex: 0 0 100%;
+    scroll-snap-align: none;
+  }
+
+  .buttonFecharMenu {
+    display: block;
+  }
+
+  ol {
+    margin-block-start: 0;
+    margin-block-end: 0;
+    padding-inline-start: 20px;
+  }
+
+}
