--- a/style.css
+++ b/style.css
@@ -363,6 +363,8 @@
     margin: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 1); 
   }
+
+
   
   .login button:hover{
     background-color: black;
@@ -401,12 +403,13 @@
   
   .loginCaixa button{
     width: 90%;
-    height: 50px;
+    height: 60px;
     background-color: rgb(122, 0, 0);
     color: white;
     border: 2px solid white;
     border-radius: 15px;
     margin: 5px 0;
+    padding: 8px;
   }
   .loginCaixa button:hover{
     background-color: black;
@@ -622,6 +625,23 @@
     color: #B20606;
     margin: 15px;
   }
+
+  .error {
+    color: red;
+    font-size: 12px;
+    display: block;  
+    margin-bottom: 5px;
+  }
+  
+  
+  .error-input {
+    border: 1px solid red;
+    width: 100%; 
+    box-sizing: border-box; 
+  }
+
+
+
   
   /* Tablet */
   @media only screen and (max-width: 768px) {
