--- a/style.css
+++ b/style.css
@@ -232,38 +232,23 @@
     display: flex;
     justify-content: center;
   }
+
+  .notices p{
+    font-size: 16px;
+    text-align: justify;
+    margin-right: 10px;
+  }
+
   .notices{
-    margin: 30px;
+    margin: 15px;
     width: 80%;
     height: 150px;
     background-color: #D9D9D9;
-    padding: 15px;
+    padding: 10px;
     display: flex;
     align-items: center;
     border-radius: 5px;
   }
-  
-  .images_notice{
-    width: 45%;
-    height: 90%;
-    background-color: #131313;
-    border-radius: 20px;
-    margin: 0 30px;
-  }
-  .star_notice{
-    align-self: flex-end;
-    width: 5%;
-    height: 18%;
-    background-image: url("https://cdn-icons-png.flaticon.com/512/73/73516.png");
-    
-  }
-  
-  .star_notice img{
-    width: 95%;
-    height: 90%;
-    opacity: 90%;
-  }
-  
   
   .barra_lateral{
     top: 0;
@@ -315,6 +300,7 @@
   
   .login_page{
     color: black;
+    background-color: #B20606;
     width: 100%;
     height: 700px;
     display: flex;
@@ -323,25 +309,6 @@
     align-items: center;
   }
   
-  .sobre{
-    width: 50%;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  
-  }
-  
-  .sobre_info h6{
-    width: 100%;
-    height: 300px;
-    padding: 10px;
-    font-size: 50px;
-  }
-  
-  .sobrenos{
-    height: 500px;
-    background-color: black;
-  }
   
   .login{
     height: 40%;
@@ -536,42 +503,11 @@
     align-items: center;
     flex-direction: column;
   }
-  
-  
-  .sobrenos {
-    font-family: sans-serif;
-    display: flex;
-    width: 100%;
-    height: 500px;
-    justify-content: space-around;
-    margin: 20px 0;
-    align-items: center;
-  }
-  
-  .criador {
-    text-align: center;
-    margin: 10px;
-  }
-  
-  
-  .criador img {
-    width: 200px;
-    height: 200px;
-    border-radius: 50%; 
-    margin-bottom: 15px;
-    border: 4px solid #555;
-  }
-  
-  .criador p {
-    font-size: 15px;
-    color: #555;
-  }
-  
+   
   .logo{
     width: 300px;
     height: 300px;
   }
-  
 
   .infoConteudo4{
     width: 90%;
@@ -640,7 +576,82 @@
     box-sizing: border-box; 
   }
 
+  .images_notice img{
+    max-width: 30%;
+    padding: 14px;
+    border-radius: 20px;
+    opacity: 80%;
+  }
 
+  .notices button{
+    border: none;
+    color: gray;
+    background-color: white;
+    display: flex;
+    padding: 8px;
+    border-radius: 10px;
+    width: 50px;
+    justify-content: center;
+    border: 1px solid gray;
+  }
+
+  .notices button:hover{
+    opacity: 50%;
+  }
+
+  .sobre{
+    width: 50%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;  
+  }
+  
+  .sobre_info h6{
+    width: 100%;
+    height: 300px;
+    padding: 10px;
+    font-size: 50px;
+  }
+  
+  .sobrenos{
+    display: flex;
+    margin: 0;
+    padding: 0;
+    height: 600px;
+    width: 100vh;
+    background-color: black;
+  }
+
+
+  .sobrenos {
+    font-family: sans-serif;
+    display: flex;
+    width: 100%;
+    height: 500px;
+    justify-content: space-around;
+    margin: 20px 0;
+    align-items: center;
+  }
+  
+  .criador {
+    text-align: center;
+    margin: 10px;
+  }
+  
+  
+  .criador img {
+    width: 200px;
+    height: 200px;
+    border-radius: 50%; 
+    margin-bottom: 15px;
+    border: 4px solid #555;
+  }
+  
+  .criador p {
+    font-size: 15px;
+    color: #555;
+  }
+  
 
   
   /* Tablet */
@@ -737,7 +748,7 @@
         padding: 10px;
         text-align: justify;
       }
-    
+ 
   }
 
 
@@ -799,13 +810,6 @@
       }
     
 
-    .sobrenos{
-        flex-direction: column;
-    }
-    .sobre_info h6 {
-        font-size: 16px;
-      }
-    
     .login {
         width: 100%;
         text-align: center;
